fix border bottom and module overflow on module picker

--- a/src/components/ModulePicker/Module.css
+++ b/src/components/ModulePicker/Module.css
@@ -2,3 +2,7 @@
   padding: 10px 20px;
   border-bottom: 1px solid lightgray;
 }
+
+.module__container:last-of-type {
+  border-bottom: none;
+}
